<resources>
    <string name="app_name">Quadratic Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Quadratic Calculator</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Calculate</string>
    <string name="edit_a">A</string>
    <string name="edit_b">B</string>
    <string name="edit_c">C</string>
    <string name="Instruction">Enter the values a, b, and c for the equation y = ax^2 + bx + c</string>
</resources>